@@ -3,7 +3,6 @@ plugins {
     id 'application'
     id 'extra-java-module-info'
     id 'org-openjfx-javafxplugin'
-    id 'org.beryx.jlink' version '3.1.1'
 }
 
 def ashigaruTerminalVersion = '1.0.0'
@@ -77,7 +76,7 @@ dependencies {
     implementation('org.jdbi:jdbi3-sqlobject:3.20.0') {
         exclude group: 'org.slf4j'
     }
-    implementation('org.flywaydb:flyway-core:7.10.7-SNAPSHOT')
+    implementation('org.flywaydb:flyway-core:7.15.0')
     implementation('org.fxmisc.richtext:richtextfx:0.10.4')
     implementation('no.tornado:tornadofx-controls:1.0.4')
     implementation('com.google.zxing:javase:3.4.0') {
@@ -93,7 +92,7 @@ dependencies {
     }
     implementation('com.sparrowwallet:hummingbird:1.7.3')
     implementation('co.nstant.in:cbor:0.9')
-    implementation('org.openpnp:openpnp-capture-java:0.0.30-1')
+    implementation('org.openpnp:openpnp-capture-java:0.0.28-0')
     implementation "io.matthewnelson.kotlin-components:kmp-tor:${vTor}-${vKmpTor}"
     if(kmpOs == "linux" && kmpArch == "arm64") {
         implementation("com.sparrowwallet.kmp-tor-binary:kmp-tor-binary-${kmpOs}${kmpArch}-jvm:${vTor}")
@@ -194,120 +193,8 @@ application {
     }
 }
 
-jlink {
-    mergedModule {
-        requires 'javafx.graphics'
-        requires 'javafx.controls'
-        requires 'java.xml'
-        requires 'java.logging'
-        requires 'javafx.base'
-        requires 'jdk.crypto.cryptoki'
-        requires 'java.management'
-        requires 'io.leangen.geantyref'
-        uses 'org.flywaydb.core.extensibility.FlywayExtension'
-        uses 'org.flywaydb.core.internal.database.DatabaseType'
-        uses 'org.eclipse.jetty.http.HttpFieldPreEncoder'
-        uses 'org.eclipse.jetty.websocket.api.extensions.Extension'
-        uses 'org.eclipse.jetty.websocket.common.RemoteEndpointFactory'
-    }
-
-    options = ['--strip-debug','--strip-native-commands', '--strip-java-debug-attributes', '--compress', '1', '--no-header-files', '--no-man-pages', '--ignore-signing-information', '--exclude-files', '**.png', '--exclude-resources', 'glob:/com.sparrowwallet.merged.module/META-INF/*']
-    launcher {
-        name = 'Ashigaru-terminal'
-        jvmArgs = ["--add-opens=javafx.graphics/com.sun.javafx.css=org.controlsfx.controls",
-                   "--add-opens=javafx.graphics/javafx.scene=org.controlsfx.controls",
-                   "--add-opens=javafx.controls/com.sun.javafx.scene.control.behavior=org.controlsfx.controls",
-                   "--add-opens=javafx.controls/com.sun.javafx.scene.control.inputmap=org.controlsfx.controls",
-                   "--add-opens=javafx.graphics/com.sun.javafx.scene.traversal=org.controlsfx.controls",
-                   "--add-opens=javafx.base/com.sun.javafx.event=org.controlsfx.controls",
-                   "--add-opens=javafx.controls/javafx.scene.control.cell=com.sparrowwallet.sparrow",
-                   "--add-opens=org.controlsfx.controls/impl.org.controlsfx.skin=com.sparrowwallet.sparrow",
-                   "--add-opens=org.controlsfx.controls/impl.org.controlsfx.skin=javafx.fxml",
-                   "--add-opens=javafx.graphics/com.sun.javafx.tk=centerdevice.nsmenufx",
-                   "--add-opens=javafx.graphics/com.sun.javafx.tk.quantum=centerdevice.nsmenufx",
-                   "--add-opens=javafx.graphics/com.sun.glass.ui=centerdevice.nsmenufx",
-                   "--add-opens=javafx.controls/com.sun.javafx.scene.control=centerdevice.nsmenufx",
-                   "--add-opens=javafx.graphics/com.sun.javafx.menu=centerdevice.nsmenufx",
-                   "--add-opens=javafx.graphics/com.sun.glass.ui=com.sparrowwallet.sparrow",
-                   "--add-opens=javafx.graphics/javafx.scene.input=com.sparrowwallet.sparrow",
-                   "--add-opens=javafx.graphics/com.sun.javafx.application=com.sparrowwallet.sparrow",
-                   "--add-opens=java.base/java.net=com.sparrowwallet.sparrow",
-                   "--add-opens=java.base/java.io=com.google.gson",
-                   "--add-opens=java.smartcardio/sun.security.smartcardio=com.sparrowwallet.sparrow",
-                   "--add-reads=com.sparrowwallet.merged.module=java.desktop",
-                   "--add-reads=com.sparrowwallet.merged.module=java.sql",
-                   "--add-reads=com.sparrowwallet.merged.module=com.sparrowwallet.sparrow",
-                   "--add-reads=com.sparrowwallet.merged.module=ch.qos.logback.classic",
-                   "--add-reads=com.sparrowwallet.merged.module=org.slf4j",
-                   "--add-reads=com.sparrowwallet.merged.module=com.fasterxml.jackson.databind",
-                   "--add-reads=com.sparrowwallet.merged.module=com.fasterxml.jackson.annotation",
-                   "--add-reads=com.sparrowwallet.merged.module=com.fasterxml.jackson.core",
-                   "--add-reads=com.sparrowwallet.merged.module=co.nstant.in.cbor",
-                   "--add-reads=kotlin.stdlib=kotlinx.coroutines.core"]
-
-        if(os.windows) {
-            jvmArgs += ["-Djavax.accessibility.assistive_technologies", "-Djavax.accessibility.screen_magnifier_present=false"]
-        }
-        if(os.macOsX) {
-            jvmArgs += ["-Dprism.lcdtext=false", "--add-opens=javafx.graphics/com.sun.glass.ui.mac=com.sparrowwallet.merged.module"]
-        }
-        if(headless) {
-            jvmArgs += ["-Dglass.platform=Monocle", "-Dmonocle.platform=Headless", "-Dprism.order=sw"]
-        }
-    }
-    addExtraDependencies("javafx")
-    jpackage {
-        imageName = "Ashigaru-terminal"
-        installerName = "Ashigaru-terminal"
-        appVersion = "${ashigaruTerminalVersion}"
-        skipInstaller = properties.skipInstallers
-        imageOptions = []
-        installerOptions = ['--file-associations', 'src/main/deploy/psbt.properties', '--file-associations', 'src/main/deploy/txn.properties', '--file-associations', 'src/main/deploy/asc.properties', '--file-associations', 'src/main/deploy/bitcoin.properties', '--file-associations', 'src/main/deploy/auth47.properties', '--file-associations', 'src/main/deploy/lightning.properties', '--license-file', 'LICENSE']
-        if(os.windows) {
-            installerOptions += ['--win-per-user-install', '--win-dir-chooser', '--win-menu', '--win-menu-group', 'Ashigaru-terminal', '--win-shortcut', '--resource-dir', 'src/main/deploy/package/windows/']
-            imageOptions += ['--icon', 'src/main/deploy/package/windows/ashigaru.ico']
-            installerType = "exe"
-        }
-        if(os.linux) {
-            if(headless) {
-                installerOptions = ['--license-file', 'LICENSE']
-            } else {
-                installerOptions += ['--resource-dir', 'src/main/deploy/package/linux/', '--linux-shortcut', '--linux-menu-group', 'Ashigaru-terminal']
-            }
-            installerOptions += ['--linux-app-category', 'utils', '--linux-app-release', '1', '--linux-rpm-license-type', 'ASL 2.0', '--linux-deb-maintainer', 'Ashigaru Open Source Project']
-            imageOptions += ['--icon', 'src/main/deploy/package/linux/Ashigaru.png', '--resource-dir', 'src/main/deploy/package/linux/']
-        }
-        if(os.macOsX) {
-            installerOptions += ['--mac-sign', '--mac-signing-key-user-name', 'Ashigaru']
-            imageOptions += ['--icon', 'src/main/deploy/package/osx/ashigaru.icns', '--resource-dir', 'src/main/deploy/package/osx/']
-            installerType = "dmg"
-        }
-    }
-}
-
-task removeGroupWritePermission(type: Exec) {
-    commandLine 'chmod', '-R', 'g-w', "$buildDir/jpackage/Ashigaru-terminal"
-}
-
-task packageZipDistribution(type: Zip) {
-    archiveFileName = "Ashigaru-terminal-${ashigaruTerminalVersion}.zip"
-    destinationDirectory = file("$buildDir/distributions")
-    from("$buildDir/jpackage/") {
-        include "Ashigaru-terminal/**"
-        include "Ashigaru-terminal.app/**"
-        include "Ashigaru-terminal-${ashigaruTerminalVersion}.dmg"
-    }
-}
-
-task packageTarDistribution(type: Tar) {
-    dependsOn removeGroupWritePermission
-    archiveFileName = "ashigaru-terminal-${ashigaruTerminalVersion}-${releaseArch}.tar.gz"
-    destinationDirectory = file("$buildDir/jpackage")
-    compression = Compression.GZIP
-    from("$buildDir/jpackage/") {
-        include "Ashigaru-terminal/**"
-    }
-}
+// jlink plugin removed (requires Gradle plugin portal which is not accessible in this environment)
+// jlink/jpackage tasks disabled - use ./gradlew run for development
 
 extraJavaModuleInfo {
     module('jackson-core-2.13.2.jar', 'com.fasterxml.jackson.core', '2.13.2') {
@@ -386,9 +273,11 @@ extraJavaModuleInfo {
         requires('org.slf4j')
         requires('com.fasterxml.jackson.databind')
     }
-    module('openpnp-capture-java-0.0.30-1.jar', 'openpnp.capture.java', '0.0.30-1') {
+    module('openpnp-capture-java-0.0.28-0.jar', 'openpnp.capture.java', '0.0.28-0') {
         exports('org.openpnp.capture')
         exports('org.openpnp.capture.library')
+        requires('java.desktop')
+        requires('com.sun.jna')
     }
     module('centerdevice-nsmenufx-2.1.7.jar', 'centerdevice.nsmenufx', '2.1.7') {
         exports('de.codecentric.centerdevice')
@@ -707,5 +596,12 @@ extraJavaModuleInfo {
     }
     module('jzlib-1.1.3.jar', 'com.jcraft.jzlib', '1.1.3') {
         exports('com.jcraft.jzlib')
+    }
+    module('bwt-jni-0.1.8.jar', 'dev.bwt.jni', '0.1.8') {
+        exports('dev.bwt.libbwt.daemon')
+    }
+    module('bokmakierie-1.0.jar', 'com.sparrowwallet.bokmakierie', '1.0') {
+        exports('com.sparrowwallet.bokmakierie')
+        requires('java.desktop')
     }
 }
